RESOLVED FIXED57155
Fix a possible deadlock when two synchronous messages are sent at the same time
https://bugs.webkit.org/show_bug.cgi?id=57155
Summary Fix a possible deadlock when two synchronous messages are sent at the same time
Anders Carlsson
Reported 2011-03-26 11:18:46 PDT
Fix a possible deadlock when two synchronouse messages are sent at the same time
Attachments
Patch (6.50 KB, patch)
2011-03-26 11:21 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-26 11:21:58 PDT
Anders Carlsson
Comment 2 2011-03-26 11:23:57 PDT
Note You need to log in before you can comment on or make changes to this bug.